--- a/maQx/Content/layout.scss
+++ b/maQx/Content/layout.scss
@@ -630,7 +630,9 @@ a.btn + a.btn{
 		margin-left: 5px;
 	}
 
-
+	.fa{
+		padding-right: 7px;
+	}
 
 	&.app-btn, &.inverse-btn, &.warning-btn, &.danger-btn{
 		color:#fff;
@@ -975,13 +977,62 @@ header {
 			@extend %inline-block;
 			@extend %pointer;
 			@extend %transition;
+			@extend %relative;			
 
 			&:hover, &:focus{
-				background: rgba(0,0,0, .2);
-			}
+				background: #008885;
 
-			&:active{
-				background: rgba(0,0,0, .6);
+				& .profile-dropout  {
+					height: auto;
+					opacity: 1;
+				}
+			}			
+
+			.profile-dropout {
+				@extend %absolute;
+				@extend %full-width;
+				min-width: 117px;
+				height: 0;
+				overflow: hidden;
+				@extend %transition;
+				@include font-size(13px);
+				background: #008885;
+				z-index: 100;				
+				text-align: left;
+				right: 0;
+				margin-top: 9px;
+				color:#fff;				
+				opacity: 0;
+
+				ul{
+					padding: 0;
+					margin: 0;
+					list-style: none;
+
+					li{
+						
+						margin: 0;
+
+						a{
+							color:#fff;
+							display: block;
+							width: 100%;
+							padding: 7px 10px;
+						}
+
+						span{
+							padding-right: 7px;
+						}
+
+						&:hover, &:focus{
+							background: rgba(0,0,0, .3);
+						}
+
+						&:active{
+							background: rgba(0,0,0, .6);
+						}
+					}
+				}
 			}
 		}
 
@@ -1098,7 +1149,7 @@ header {
 
 		.top-toolbar{
 			.left-toolbar {
-				left: 135px;
+				left: 175px;
 			}
 
 			.copyInfo {
