--- a/maQx/Views/Plants/Create.cshtml
+++ b/maQx/Views/Plants/Create.cshtml
@@ -5,8 +5,7 @@
     Layout = "~/Views/Shared/_FramePage.cshtml";
 }
 
-<div class="generic-template generic-form" ng-app="sectionApp">
-
+<div class="generic-template generic-form">
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
