--- a/maQx/Views/Divisions/Index.cshtml
+++ b/maQx/Views/Divisions/Index.cshtml
@@ -1,40 +1,19 @@
-﻿@model IEnumerable<maQx.Models.Division>
-
-@{
+﻿@{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_FramePage.cshtml";
+    Layout = "~/Views/Shared/_TablePage.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Code)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Code)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Key }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Key }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Key })
-        </td>
-    </tr>
+@section Scripts{
+    <script>
+        angular.module("tabularApp").service("DataService", ['$resource', function ($resource) {
+            return {
+                query: function () {
+                    return $resource('get/divisions').get();
+                },
+                init: function () {
+                    return [{ a: 'Code', b: 'Code' }, { a: 'Name', b: 'Name' }, { a: 'Plant.Name', b: 'Plant' }, { a: 'Modified', b: 'Modified' }];
+                }
+            }
+        }]);
+    </script>
 }
-
-</table>
