--- a/maQx/Views/Shared/_FramePage.cshtml
+++ b/maQx/Views/Shared/_FramePage.cshtml
@@ -7,7 +7,7 @@
     </div>
 }
 <!DOCTYPE html>
-<html>
+<html ng-app="sectionApp" class="ng-cloak">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,6 +29,12 @@
 </head>
 <body>
     <div class="frame-layout">
+        <div ng-controller="AlertController as aCtrl">
+            <div class="alert" ng-show="aCtrl.isShow()" ng-class="aCtrl.alertType()" role="alert">
+                <button type="button" class="close" ng-click="aCtrl.close()"  aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <strong><span ng-bind="aCtrl.type"></span></strong> <span ng-bind="aCtrl.message"></span>
+            </div>
+        </div>
         <div class="init-alert-panel">
             @if (ViewBag.Info != null)
             {
