--- a/maQx/Views/Invites/Create.cshtml
+++ b/maQx/Views/Invites/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_FramePage.cshtml";
 }
 
-<div class="generic-template generic-form" ng-app="sectionApp">
+<div class="generic-template generic-form">
 
     @if (Model.Organizations.Count() > 1)
     {
