--- a/maQx/Views/DepartmentMenus/Index.cshtml
+++ b/maQx/Views/DepartmentMenus/Index.cshtml
@@ -19,7 +19,7 @@
                     </div>
 
                     <div class="pull-right">
-                        <label><span class="input-group-addon addon-icon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span><input type="search" class="form-control input-sm" placeholder="Search" aria-controls="DataTables_Table_0" ng-model="search.Name"></label>
+                        <label><span class="input-group-addon addon-icon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span><input type="search" class="form-control input-sm" placeholder="Search" aria-controls="DataTables_Table_0" ng-model="search"></label>
                     </div>
 
                 }
@@ -38,12 +38,20 @@
                     </div>
 
                     <div class="css-fade" ng-show="dCtrl.proto.showContent()">
+                        <div class="menu-info-text">
+                            <span class="fa fa-info-circle"></span><span class="ui-bold" ng-bind="dCtrl.proto.getMenuCount()"></span> of <span class="ui-bold" ng-bind="dCtrl.proto.getMappedMenuCount()"></span> menus mapped
+                        </div>
                         <div class="menu-content" ng-repeat="item in dCtrl.departmentList | filter:search track by item.department.ID">
-                            <div><span ng-bind="item.department.Name"></span> <span class="fa fa-plus pull-right" data-toggle="tooltip" title="Add Menus" ng-click="dCtrl.openMenus('lg', item.department)"></span></div>
+                            <div><span ng-bind="item.department.Name"></span> <span class="fa fa-edit pull-right" data-toggle="tooltip" title="Manage Menus" ng-click="dCtrl.openMenus('lg', item.department)"></span></div>
                             <div>
-                                <ul>
+                                <ul ng-hide="dCtrl.proto.showMenus(item)">
                                     <li class="text-center">
                                         No menus added
+                                    </li>
+                                </ul>
+                                <ul ng-show="dCtrl.proto.showMenus(item)">
+                                    <li ng-repeat="selectedMenu in item.divisionMenu track by selectedMenu.ID">
+                                        <span ng-bind="selectedMenu.Name"></span>
                                     </li>
                                 </ul>
                             </div>
@@ -77,12 +85,15 @@
             <div class="modal-body">
                 <p class="modal-content-title">Select menus for <span class="ui-bold" ng-bind="items.department.Name"></span></p>
                 <ul class="menu-selector-list">
-                    <li ng-repeat="item in items.item | filter:menuSearch track by item.menu.ID">
-                        <input type="checkbox" ng-model="item.selected" id="{{item.menu.ID}}" /><label ng-class="{select:isSelected(item.menu)}" for="{{item.menu.ID}}" ng-bind="item.menu.Name"></label>
+                    <li ng-repeat="element in menu | filter:menuSearch track by element.menu.ID">
+                        <input type="checkbox" ng-disabled="!isSelectable(element)" ng-model="element.selected" id="{{element.menu.ID}}" /><label for="{{element.menu.ID}}" ng-bind="element.menu.Name"></label>
                     </li>
                 </ul>
             </div>
             <div class="modal-footer">
+                <div class="pull-left statusText" ng-show="Loading()">
+                    Updating menus...
+                </div>
                 <button class="btn btn-primary app-btn" ng-disabled="Loading()" ng-click="ok()">Save</button>
                 <button class="btn btn-warning inverse-btn" ng-disabled="Loading()" ng-click="cancel()">Cancel</button>
             </div>
