--- a/maQx/Views/DepartmentMenus/Index.cshtml
+++ b/maQx/Views/DepartmentMenus/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model maQx.Models.DepartmentMenuViewModel
+﻿@model maQx.Models.DepartmentDivisionViewModel
 @{
     Layout = "~/Views/Shared/_FramePage.cshtml";
 }
