Department Mapping unstage fixes

--- a/maQx/Views/DepartmentUsers/Index.cshtml
+++ b/maQx/Views/DepartmentUsers/Index.cshtml
@@ -79,7 +79,7 @@
             <div class="modal-header">
                 <h3 class="modal-title">Menu Collection</h3>
                 <div class="pull-right">
-                    <label class="modal-search"><span class="input-group-addon addon-icon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span><input type="search" class="form-control input-sm" placeholder="Search" ng-model="menuSearch.menu.Name"></label>
+                    <label class="modal-search"><span class="input-group-addon addon-icon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span><input type="search" class="form-control input-sm" placeholder="Search" ng-model="menuSearch.user.Firstname"></label>
                 </div>
             </div>
             <div class="modal-body">
