--- a/maQx/Views/Departments/Index.cshtml
+++ b/maQx/Views/Departments/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<maQx.Models.Department>
+﻿@model maQx.Models.DepartmentViewModel
 
 @{
     ViewBag.Title = "Index";
@@ -8,117 +8,149 @@
 <div class="app-generic-template detail-template">
     <div class="modular-layout" ng-controller="DepartmentController as dCtrl">
 
-        <div class="modular-form generic-template generic-form css-fade detail-template" ng-show="dCtrl.proto.formEdit()">
-            <form>
-                <div class="admin-form">
-                    <div ng-include="dCtrl.proto.getPage()"></div>
-                    <div class="generic-form-bottom-tools">
-                        <a href="#" show-when="!dCtrl.isLoading" ng-click="dCtrl.proto.closeEdit()" class="btn btn-sm">Back to list</a>
+        @if (Model != null && Model.Divisions.Count() > 1)
+        {
+            <div class="modular-form generic-template generic-form css-fade detail-template" ng-show="dCtrl.proto.formEdit()">
+                <form>
+                    <div class="admin-form">
+                        <div ng-include="dCtrl.proto.getPage()"></div>
+                        <div class="generic-form-bottom-tools">
+                            <a href="#" show-when="!dCtrl.isLoading" ng-click="dCtrl.proto.closeEdit()" class="btn btn-sm">Back to list</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="css-fade" ng-hide="dCtrl.proto.formEdit()">
+                <div class="modular-controls">
+                    <div class="select-control">
+                        <div>
+                            Divisions
+                        </div>
+                        <div>
+                            @Html.DropDownListFor(model => model.Division, Model.Divisions, htmlAttributes: new { ng_model = "dCtrl.division", ng_disabled = "dCtrl.proto.isLoading()", ng_change = "dCtrl.proto.change()" })
+                        </div>
+                    </div>
+                    <div class="pull-right">
+                        <label><span class="input-group-addon addon-icon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span><input type="search" class="form-control input-sm" placeholder="Search" aria-controls="DataTables_Table_0" ng-model="search"></label>
                     </div>
                 </div>
-            </form>
-        </div>
-        <div class="css-fade" ng-hide="dCtrl.proto.formEdit()">
-            <div class="modular-controls">
                 <div>
-                    <button type="button" ng-click="dCtrl.proto.add()" class="btn btn-sm btn-primary app-btn"><span class="fa fa-plus"></span> Create</button>
-                </div>
-                <div class="pull-right">
-                    <label><span class="input-group-addon addon-icon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></span><input type="search" class="form-control input-sm" placeholder="Search" aria-controls="DataTables_Table_0" ng-model="search.Name"></label>
+                    <div>
+                        <div class="circle-loader  css-fade" ng-show="dCtrl.proto.isLoading()">
+                            <div class="loader-animate"></div>
+                            <div><h3>Loading..</h3></div>
+                        </div>
+                        <ul class="material-list-view css-fade pull-control" ng-show="dCtrl.proto.isLoaded()">
+                            <li ng-repeat="division in dCtrl.divisionList | select:dCtrl.division:'division.Key':'0' | filter:search track by division.division.Key">
+                                <div>
+                                    <span class="fa fa-chevron-right "></span><span class="ui-bold" ng-bind="division.division.Name"></span>
+                                </div>
+                                <div class="pull-right">
+                                    <button type="button" ng-click="dCtrl.proto.add(division.division)" class="btn btn-sm app-btn fa-clear"><span class="fa fa-plus"></span></button>
+                                </div>
+                                <ul>
+                                    <li ng-animate="'animate'" ng-repeat="item in division.departmentList track by item.Key">
+                                        <div>
+                                            <span class="fa fa-chevron-right "></span><span ng-bind="item.Name"></span>
+                                        </div>
+                                        <div class="item-controls">
+                                            <div class="tp-edit" ng-click="dCtrl.proto.edit(item, division.division)">
+                                                <span class="fa fa-edit"></span>
+                                            </div>
+                                            <div class="tp-delete" ng-click="dCtrl.proto.del(item)">
+                                                <span class="fa fa-trash-o"></span>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div>
-                <div>
-                    <div class="circle-loader  css-fade" ng-show="dCtrl.proto.isLoading()">
-                        <div class="loader-animate"></div>
-                        <div><h3>Loading..</h3></div>
-                    </div>
-                    <ul class="material-list-view css-fade" ng-show="dCtrl.proto.isLoaded()">
-                        <li ng-animate="'animate'" ng-repeat="item in dCtrl.departmentList | filter:search track by item.ID ">
+
+            @section Scripts {
+                @Scripts.Render("~/bundles/department-controller")
+
+                <script type="text/ng-template" id="create.html">
+                    <h1>Create a department</h1>
+                    <p>Departments are used to seperate modules</p>
+                    <div class="admin-form-layout">
+                        <div class="form-group">
                             <div>
-                                <span class="fa fa-chevron-right "></span><span ng-bind="item.Name"></span>
-                            </div>
-                            <div class="item-controls">
-                                <div class="tp-edit" ng-click="dCtrl.proto.edit(item)">
-                                    <span class="fa fa-edit"></span>
-                                </div>
-                                <div class="tp-delete" ng-click="dCtrl.proto.del(item)">
-                                    <span class="fa fa-trash-o"></span>
+                                <div>
+                                    <input type="text" ng-model="dCtrl.department.Name" placeholder="Department Name" class="form-control" />
                                 </div>
                             </div>
-                        </li>
-                    </ul>
-                </div>
+                        </div>
+                        <div class="form-group">
+                            <div>
+                                <div>
+                                    <input type="button" value="Create" disable-when="dCtrl.isLoading" ng-click="dCtrl.proto.save()" class="btn btn-default app-btn" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </script>
+                <script type="text/ng-template" id="edit.html">
+                    <h1>Edit department</h1>
+                    <p>Editing a department will not affect other entities</p>
+                    <div class="admin-form-layout">
+                        <div class="form-group">
+                            <div>
+                                <div>
+                                    <input type="text" ng-model="dCtrl.department.Name" placeholder="Department Name" class="form-control" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div>
+                                <div>
+                                    <input type="button" value="Edit" disable-when="dCtrl.isLoading" ng-click="dCtrl.proto.update()" class="btn btn-default btn-warning" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </script>
+                <script type="text/ng-template" id="delete.html">
+                    <h1>Delete department</h1>
+                    <h3 class="delete-detail">
+                        Are you sure you want to delete this?
+                    </h3>
+                    <table class="table table-responsive detail-table">
+                        <tbody>
+                            <tr>
+                                <td><div>Name</div></td>
+                                <td>:</td>
+                                <td><div class="ui-bold" ng-bind="dCtrl.department.Name"></div></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="admin-form-layout">
+                        <div class="form-group">
+                            <div>
+                                <div>
+                                    <input type="button" value="Yes, Delete" disable-when="dCtrl.isLoading" ng-click="dCtrl.proto.remove()" class="btn btn-default btn-danger" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </script>
+            }
+        }
+        else
+        {
+            <div class="active-warning-info">
+                <h3 class="info-title">
+                    <span class="fa-stack title-icon yellow">
+                        <i class="fa fa-square-o fa-stack-2x"></i>
+                        <i class="fa fa-info fa-stack-1x"></i>
+                    </span> No divisions were created yet.
+                </h3>
+                <p>
+                    Departments and its menus are subsets of a division. @Html.ActionLink("Create a division", "Create", "Divisions") to process further.
+                </p>
             </div>
-        </div>
+        }
     </div>
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/department-controller")
-
-    <script type="text/ng-template" id="create.html">
-        <h1>Create a department</h1>
-        <p>Departments are used to seperate modules</p>
-        <div class="admin-form-layout">
-            <div class="form-group">
-                <div>
-                    <div>
-                        <input type="text" ng-model="dCtrl.department.Name" placeholder="Department Name" class="form-control" />
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div>
-                    <div>
-                        <input type="button" value="Create" disable-when="dCtrl.isLoading" ng-click="dCtrl.proto.save()" class="btn btn-default app-btn" />
-                    </div>
-                </div>
-            </div>
-        </div>
-    </script>
-    <script type="text/ng-template" id="edit.html">
-        <h1>Edit department</h1>
-        <p>Editing a department will not affect other entities</p>
-        <div class="admin-form-layout">
-            <div class="form-group">
-                <div>
-                    <div>
-                        <input type="text" ng-model="dCtrl.department.Name" placeholder="Department Name" class="form-control" />
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div>
-                    <div>
-                        <input type="button" value="Edit" disable-when="dCtrl.isLoading" ng-click="dCtrl.proto.update()" class="btn btn-default btn-warning" />
-                    </div>
-                </div>
-            </div>
-        </div>
-    </script>
-    <script type="text/ng-template" id="delete.html">
-        <h1>Delete department</h1>
-        <h3 class="delete-detail">
-            Are you sure you want to delete this?
-        </h3>
-        <table class="table table-responsive detail-table">
-            <tbody>
-                <tr>
-                    <td><div>Name</div></td>
-                    <td>:</td>
-                    <td><div class="ui-bold" ng-bind="dCtrl.department.Name"></div></td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="admin-form-layout">
-            <div class="form-group">
-                <div>
-                    <div>
-                        <input type="button" value="Yes, Delete" disable-when="dCtrl.isLoading" ng-click="dCtrl.proto.remove()" class="btn btn-default btn-danger" />
-                    </div>
-                </div>
-            </div>
-        </div>
-    </script>
-}
